# libtvrender

./: CMakeLists.txt  INSTALL.md  README.md  libtvrender.pc.in
libtvrender/: tvr.h  tvr_core.h
src/: tvr_core.c
